Version 2.8:
=============
- [New] Element storage through retrieve(), store() and unstore()
- [New] Event delegation through relayEvent() and unrelayEvent(), with support for focus and blur
- [New] Cross-browser support for event.target and event.currentTarget in event callback functions
- [New] New method hasChild() to allow testing for descendant
- [New] New core methods: indexOf(), map(), filter(), every() and some()
- [Chg] each() can now be terminated when the callback function returns false
- [Chg] Selector engine now returns elements in the order they appear in the document
- [Chg] Events fired via triggerEvent() now bubble
- [Chg] Bubbling events can be stopped either by calling DOMAssistant.cancelBubble or returning false at the event handler
- [Chg] Moved prev() and next() methods to the core module
- [Chg] Dropped support for IE 5.0
- [Fix] Invalid selectors throw error
- [Fix] :checked, [selected] and [multiple] buggy in many browsers
- [Fix] :nth-of-type, :only-of-type buggy in IE
- [Fix] attribute selector with empty value (eg. [value='']) does not work
- [Fix] attribute selector with square brackets (eg. [name='foo[bar]']) does not work
- [Fix] tag#id incorrectly returns the element even when its tagname does not match
- [Fix] Unable to get form by $() when it contains field with name="id"
- [Fix] Negated pseudo-classes do not work
- [Fix] Selectors that start with >, + and ~ do not work in IE
- [Fix] Multi-selectors return duplicated elements in IE
- [Fix] Certain selectors sometimes return less elements than expected in IE
- [Fix] Comment nodes not skipped in IE
- [Fix] Ajax does not work on local files
- [Fix] Ajax timeouts sometimes not detected in IE
- [Fix] Multiple issues with getting and setting opacity in IE
- [Fix] setStyle on newly created (but not yet added to the DOM) elements fails in IE
- [Fix] setStyle('display', 'none') does not work properly in IE when the element is relatively positioned